--- a/brochure.html
+++ b/brochure.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="0; url=https://raw.githubusercontent.com/rollanvales25/ACQUIESCENT-SYSTEMS/main/AQS_BROCHURE.pdf" />
-    <title>Redirecting to Brochure...</title>
+    <meta http-equiv="refresh" content="0; url=/brochure/AQS_BROCHURE.pdf" />
+    <title>Redirecting to Brochure</title>
   </head>
   <body>
-    <p>If you're not redirected automatically, <a href="https://raw.githubusercontent.com/rollanvales25/ACQUIESCENT-SYSTEMS/main/AQS_BROCHURE.pdf">click here to view the brochure</a>.</p>
+    <p>If you're not redirected, <a href="/brochure/AQS_BROCHURE.pdf">click here</a>.</p>
   </body>
 </html>
