--- a/index.html
+++ b/index.html
@@ -53,13 +53,12 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Home</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
+     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
+      <a class="nav-link" href="index.html">Home</a>
+            </li>
+         <li class="nav-item">
             <a class="nav-link" href="#products">Products</a>
           </li>
           <li class="nav-item">
