--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <title>Acquiescent Systems</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <link rel="icon" type="image/png" href="/https://aqsindia.in/my-favicon/favicon.ico/favicon-96x96.png" sizes="96x96" />
-  <link rel="icon" type="image/svg+xml" href="/https://aqsindia.in/my-favicon/favicon.ico/favicon.svg" />
-  <link rel="shortcut icon" href="/https://aqsindia.in/my-favicon/favicon.ico/favicon.ico" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/https://aqsindia.in/my-favicon/favicon.ico/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" href="/https://aqsindia.in/favicon/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/https://aqsindia.in/favicon/favicon.svg" />
+  <link rel="shortcut icon" href="/https://aqsindia.in/favicon/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/https://aqsindia.in/favicon/apple-touch-icon.png" />
   <meta name="apple-mobile-web-app-title" content="MyWebSite" />
-  <link rel="manifest" href="/https://aqsindia.in/my-favicon/favicon.ico/site.webmanifest" />
+  <link rel="manifest" href="/https://aqsindia.in/favicon/site.webmanifest" />
   <style>
     body {
       font-family: Arial, sans-serif;
