--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Acquiescent Systems</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+<!-- Favicons
+	================================================== -->
   <link rel="icon" type="image/png" href="/https://aqsindia.in/favicon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/https://aqsindia.in/favicon/favicon.svg" />
   <link rel="shortcut icon" href="/https://aqsindia.in/favicon/favicon.ico" />
