--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
   <section class="banner">
     <img src="aa.jpeg" class="img-fluid w-100" alt="Industrial Automation Banner">
-	<p><center>Please email your requirements to <a href="mailto:sales@aqsindia.in">sales@aqsindia.in</a> ,and our team will assist you promptly.</p>
+	<p><center>ACQUIESCENT SYSTEMS (AQS) IS ISO 9001:2015 CERTIFIED COMPANY DEALING IN INDUSTRIAL ENGINEERING SERVICES INCLUDING CLEAN ROOM VALIDATION FOR AIR QUALITY AND THERMAL PARAMETERS , SUPPLY AND CALIBRATION OF PROCESS AND MEASURING INSTRUMENTS<br>Please email your requirements to <a href="mailto:sales@aqsindia.in">sales@aqsindia.in</a> ,and our team will assist you promptly.</p>
   </section>
 
   </section>
