--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     }
     header {
       background-color: #99caff;
-      color: white;
+      color: black;
       padding: 0.5rem 0;
     }
     header a {
