--- a/index.html
+++ b/index.html
@@ -87,6 +87,38 @@
       margin-top: 0;
       padding-top: 0;
     }
+    /* === Mobile Responsive Fixes === */
+    @media (max-width: 767.98px) {
+      header a {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+      }
+
+      .header-text h4 {
+        font-size: 1.2rem;
+      }
+
+      .header-text .sub {
+        font-size: 0.9rem;
+        line-height: 1.2;
+      }
+
+      .header-text .iso {
+        font-size: 0.9rem;
+      }
+
+      header img {
+        width: 150px !important;
+        height: auto !important;
+      }
+
+      header div[style*="font-weight: bold;"] {
+        font-size: 0.9rem !important;
+        text-align: center !important;
+        margin-top: 0.5rem;
+      }
+    }
   </style>
 </head>
 <body>
