--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
     }
     header {
       background-color: #99caff;
-      color: white;
+      color: black;
       padding: 0.5rem 0;
     }
         header a {
@@ -107,6 +107,10 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
     <div class="container">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
      <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
