--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,17 @@
       color: black;
       padding: 0.5rem 0;
     }
+        nav a {
+      color: #ccc;
+      margin-right: 20px;
+      text-decoration: none;
+      font-size: 1rem;
+    }
+
+    .navbar-nav .nav-link.active {
+      font-weight: bold;
+      color: #FFD700;
+    }
         header a {
       display: flex;
       align-items: center;
