--- a/index.html
+++ b/index.html
@@ -15,6 +15,21 @@
   <link rel="apple-touch-icon" sizes="180x180" href="https://aqsindia.in/favicon/apple-touch-icon.png" />
   <meta name="apple-mobile-web-app-title" content="MyWebSite" />
   <link rel="manifest" href="https://aqsindia.in/favicon/site.webmanifest" />
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Acquiescent Systems",
+  "url": "https://aqsindia.in",
+  "logo": "https://aqsindia.in/favicon/favicon-96x96.png",
+  "description": "Acquiescent Systems (AQS) is an ISO 9001:2015 certified company offering calibration, clean room validation, and industrial instrumentation services in Goa.",
+  "contactPoint": [{
+    "@type": "ContactPoint",
+    "telephone": "+91-9423736453",
+    "contactType": "Sales",
+    "email": "sales@aqsindia.in"
+  }]
+}
   <style>
     body {
       font-family: Arial, sans-serif;
