--- a/index.html
+++ b/index.html
@@ -183,19 +183,27 @@
     </a>
   </header>
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-    <div class="container">
-  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-  <span class="navbar-toggler-icon"></span>
-  </button>
-     <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-      <a class="nav-link" href="index.html">Home</a>
-            </li>
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Calibration</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Validation</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Temperature Mapping</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Sales and Service</a>
+          </li>
          <li class="nav-item">
-            <a class="nav-link" href="#products">Products</a>
+            <a class="nav-link" href="index.html">Industrial Engineering Service</a>
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">About Us</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
