--- a/index.html
+++ b/index.html
@@ -32,7 +32,18 @@
 }
 </script>
   <style>
-    .banner {
+.top {
+  background-color: #f4f4f4;
+  padding: 20px 0;
+  border-top: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
+}
+.topi {
+  display: flex;
+  justify-content: space-between;
+  margin: auto;
+}
+.banner {
   background-color: #99caff;
   color: #fff;
   padding: 60px 20px;
@@ -249,6 +260,68 @@
       </div>
     </section>
   </main>
+
+<div class="top">
+  <div class="topi container">
+  
+    <div cl<div class="blogi1" style="width: 250px;">
+      <h2 class="what">Calibration</h2>
+      <p>
+    • <a href="https://aqsindia.in/" class="linka">Pressure Measurements</a><br>
+    • <a href="https://aqsindia.in/" class="linka">Thermal Measurements</a><br>
+    • <a href="https://aqsindia.in/" class="linka">Mechanical Measurements</a><br>
+    • <a href="https://aqsindia.in/" class="linka">Electro-Technical &nbsp;&nbsp;Measurements</a><br>
+    • <a href="https://aqsindia.in/" class="linka">Medical Measurements</a><br>
+    • <a href="https://aqsindia.in/" class="linka">Other Process Related &nbsp;&nbsp;Measurements</a><br>
+      </p>
+    </div>
+
+    <div class="blogi1" style="width: 200px;">
+      <h2 class="what">Validation</h2>
+      <p>
+         • <a href="https://aqsindia.in/" class="linka">Clean Room Validation</a><br>
+         • <a href="https://aqsindia.in/" class="linka">Isolator Validation</a><br>
+         • <a href="https://aqsindia.in/" class="linka">Biosafety, LAF Validation</a><br>
+         • <a href="https://aqsindia.in/" class="linka">PLC Validation</a>
+      </p>
+    </div>
+
+<div class="blogi1" style="width: 210px;">
+  <h2 class="what">Sales and Services</h2>
+  <p>
+    • <a href="https://aqsindia.in/" class="linka">Process Instruments</a><br>
+    • <a href="https://aqsindia.in/" class="linka">Laboratory Instruments</a><br>
+    • <a href="https://aqsindia.in/" class="linka">Engineering Instruments</a><br>
+    • <a href="https://aqsindia.in/" class="linka">Instrument Installation</a><br>
+  </p>
+</div>
+
+
+    <div class="blogi1" style="width: 218px;">
+      <h2 class="what">Temperature Mapping</h2>
+      <p>
+         • <a href="https://aqsindia.in/" class="linka">Warehouse Temperature & &nbsp;&nbsp;RH Monitoring</a><br>
+         • <a href="https://aqsindia.in/" class="linka">Autoclaves, Sterilizer &nbsp;&nbsp;Temperature Mapping</a><br>
+         • <a href="https://aqsindia.in/" class="linka">Dry Heat Sterilizer, Ovens &nbsp;&nbsp;Temp Mapping</a><br>
+         • <a href="https://aqsindia.in/" class="linka">Incubator, Cold Room &nbsp;&nbsp;Temperature Mapping</a>
+      </p>
+    </div>
+
+    <div class="blogi1" style="width: 300px;">
+      <h2 class="what">Industrial Engineering Service</h2>
+      <p>
+         • <a href="https://aqsindia.in/" class="linka">Maintenance Services</a><br>
+         • <a href="https://aqsindia.in/" class="linka">Annual Maintenance Contracts (AMC)</a><br>
+         • <a href="https://aqsindia.in/" class="linka">Qualification</a><br>
+         • <a href="https://aqsindia.in/" class="linka">Commissioning</a><br>
+         • <a href="https://aqsindia.in/" class="linka">Customization Of Process Instruments</a><br>
+         • <a href="https://aqsindia.in/"class="linka">Panel Wiring</a>
+      </p>
+    </div>
+
+    <div class="clr"></div>
+  </div>
+</div>
 
   <footer>
     <p>© 2025 Acquiescent Systems</p>
