--- a/index.html
+++ b/index.html
@@ -32,6 +32,33 @@
 }
 </script>
   <style>
+.blogi1 {
+  float: left;
+  padding: 10px;
+  margin-right: 20px;
+  font-family: Arial, sans-serif;
+  font-size: 13px;
+  color: #333;
+}
+
+.blogi1 h2.what {
+  font-weight: bold;
+  color: #000;
+  font-size: 15px;
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 5px;
+  margin-bottom: 10px;
+}
+
+.linka {
+  color: #037CC1;
+  text-decoration: none;
+}
+
+.linka:hover {
+  color: #0077be;
+  text-decoration: underline;
+}
 .top {
   background-color: #f4f4f4;
   padding: 20px 0;
