--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
       </div>
    <div style="font-weight: bold; font-size: 1rem; text-align: right; color: #000;">
     &nbsp;&nbsp;&nbsp;&nbsp;• Calibration &nbsp;&nbsp;&nbsp;&nbsp;• Validation &nbsp;&nbsp;&nbsp;&nbsp;• Sales and Service
-    &nbsp;&nbsp;&nbsp;&nbsp;• Repair &nbsp;&nbsp;&nbsp;&nbsp;• Industrial Services
+    &nbsp;&nbsp;&nbsp;&nbsp;• Industrial Engineering Services
     </div>
     </a>
   </header>
