--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
   display: flex;
   justify-content: space-between;
   margin: auto;
+  overflow-x: auto;            /* Allows horizontal scroll if needed */
+  flex-wrap: nowrap;           /* Don't wrap on desktop */
 }
 .banner {
   background-color: #99caff;
