--- a/index.html
+++ b/index.html
@@ -276,14 +276,18 @@
   </div>
 </section>
 	
+  <!-- Product Section -->
   <main>
-    <section id="products" class="container"><center>
-      <h2 class="text-center mb-4">Our Products</h2>
+    <section id="products" class="container">
       <div class="row">
-        <div class="col-md-120 mb-4">
-          <div class="product-card">
-            <h5>HVAC Instruments, Calibration Master Instruments, Moisture Transmitter, Pressure Transmitters, Temperature Instrument, Level Instruments, Magnehelic Gauge, Flow Instruments, Pressure Gauges, Gauge Accessories, Pressure Switch, Calibration Instruments, Data Loggers, PID Controller, Analog Vacuum Gauge, Measurement Gauges & Gauge Fittings, Potable Meter, Air Velocity Sensor, Elements & Module, Sensors, calliper, Digital Multimeter, IR Thermometer, Digital Thermometer .</h5>
-            <a href="contact.html" class="btn btn-outline-primary btn-sm">Request Quote</a>
+        <div class="col-md-12 mb-4">
+          <div class ="product-card">
+      <h2 class="text-center mb-4">WELCOME TO ACQUIESCENT SYSTEMS (AQS)</h2>
+            <h5 class="text-center">
+              At Acquiescent Systems, we are dedicated to delivering precision-driven solutions in validation, calibration, and regulatory compliance services tailored for the pharmaceutical, biotechnology, healthcare, and life sciences industries. With a strong commitment to quality and compliance, our goal is to help organizations meet stringent global regulatory standards while ensuring operational efficiency and product integrity.
+Our team of experienced professionals brings deep domain knowledge and hands-on expertise to every project we undertake. Whether it's cleanroom validation, temperature mapping, GMP audits, or calibration services, we work closely with clients to develop customized, cost-effective solutions that align with their quality assurance goals and regulatory obligations.
+Driven by a customer-first approach and guided by industry best practices, Acquiescent Systems continues to set new benchmarks in technical excellence and service reliability. We are proud to be a trusted partner to companies striving for regulatory excellence, operational consistency, and long-term success.
+            </h5>
           </div>
         </div>
       </div>
