--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Calibration</a>
+            <a class="nav-link" href="calibration-goa.html">Calibration</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="index.html">Validation</a>
@@ -300,12 +300,12 @@ Driven by a customer-first approach and guided by industry best practices, Acqui
     <div cl<div class="blogi1" style="width: 250px;">
       <h2 class="what">Calibration</h2>
       <p>
-    • <a href="https://aqsindia.in/" class="linka">Pressure Measurements</a><br>
-    • <a href="https://aqsindia.in/" class="linka">Thermal Measurements</a><br>
-    • <a href="https://aqsindia.in/" class="linka">Mechanical Measurements</a><br>
-    • <a href="https://aqsindia.in/" class="linka">Electro-Technical &nbsp;&nbsp;Measurements</a><br>
-    • <a href="https://aqsindia.in/" class="linka">Medical Measurements</a><br>
-    • <a href="https://aqsindia.in/" class="linka">Other Process Related &nbsp;&nbsp;Measurements</a><br>
+    • <a href="Pressure Instruments.html" class="linka">Pressure Instruments</a><br>
+    • <a href="Thermal Instruments.html" class="linka">Thermal Instruments</a><br>
+    • <a href="Mechanical Instruments.html" class="linka">Mechanical Instruments</a><br>
+    • <a href="Electro-Technical Instruments.html" class="linka">Electro-Technical Instruments</a><br>
+    • <a href="Medical Instruments.html" class="linka">Medical Instruments</a><br>
+    • <a href="Other Process Related.html" class="linka">Other Process Related &nbsp;&nbsp;Instruments</a><br>
       </p>
     </div>
 
