--- a/404.html
+++ b/404.html
@@ -3,37 +3,36 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>404 - Page Not Found</title>
+  <title>Page Under Construction</title>
   <style>
     body {
-      background-color: #f5f5f5;
-      font-family: Arial, sans-serif;
+      background-color: #99caff;
+      color: #333;
+      font-family: 'Segoe UI', sans-serif;
       text-align: center;
-      padding: 40px;
-    }
-
-    img {
-      max-width: 400px;
-      width: 80%;
-      height: auto;
-      margin-top: 30px;
+      padding: 60px 20px;
     }
 
     h1 {
       font-size: 48px;
-      color: #333;
+      margin-bottom: 10px;
     }
 
     p {
       font-size: 18px;
-      color: #666;
+      margin-top: 0;
+      color: #555;
+    }
+
+    img {
+      width: 300px;
+      max-width: 80%;
+      margin: 30px 0;
     }
 
     a {
-      display: inline-block;
-      margin-top: 20px;
+      color: #ff6f00;
       text-decoration: none;
-      color: #007acc;
       font-weight: bold;
     }
 
@@ -43,14 +42,11 @@
   </style>
 </head>
 <body>
-  <h1>Oops! Page Not Found</h1>
-  <p>We couldn’t find the page you were looking for.</p>
+  <h1>🚧 Page Under Construction</h1>
+  <p>We're working hard to bring this page to life. Check back soon!</p>
+  
+  <img src="https://i.imgur.com/6RMhx.gif" alt="Under Construction" />
 
-  <!-- Image hosted in your repo or externally -->
-  <img src="https://i.imgur.com/qIufhof.png" alt="404 Error Image" />
-
-  <p>
-    <a href="/">Return to homepage</a>
-  </p>
+  <p><a href="/">Go back to homepage</a></p>
 </body>
 </html>
