--- a/404.html
+++ b/404.html
@@ -2,51 +2,44 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Page Under Construction</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <style>
     body {
-      background-color: #99caff;
-      color: #333;
       font-family: 'Segoe UI', sans-serif;
+      background-color: #ffffff;
+      color: #111;
       text-align: center;
       padding: 60px 20px;
     }
 
     h1 {
       font-size: 48px;
-      margin-bottom: 10px;
-    }
-
-    p {
-      font-size: 18px;
-      margin-top: 0;
-      color: #555;
+      margin-bottom: 30px;
     }
 
     img {
-      width: 300px;
-      max-width: 80%;
-      margin: 30px 0;
+      max-width: 400px;
+      width: 80%;
+      height: auto;
+      margin-bottom: 30px;
     }
 
-    a {
-      color: #ff6f00;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    a:hover {
-      text-decoration: underline;
+    p {
+      font-size: 16px;
+      color: #333;
+      font-style: italic;
+      max-width: 600px;
+      margin: 0 auto;
     }
   </style>
 </head>
 <body>
-  <h1>🚧 Page Under Construction</h1>
-  <p>We're working hard to bring this page to life. Check back soon!</p>
-  
-  <img src="https://i.imgur.com/6RMhx.gif" alt="Under Construction" />
-
-  <p><a href="/">Go back to homepage</a></p>
+  <h1>UNDER CONSTRUCTION</h1>
+  <!-- Embedded image as Base64 -->
+  <img src="https://aqsindia.in/images/pressure.jpg" alt="Under Construction" />
+  <p>
+    Our website is under construction, but we are ready to go!<br>
+    Special surprise for our subscribers only
+  </p>
 </body>
 </html>
