--- a/404.html
+++ b/404.html
@@ -34,12 +34,11 @@
   </style>
 </head>
 <body>
-  <h1>UNDER CONSTRUCTION</h1>
+  <h1>WEBPAGE UNDER CONSTRUCTION</h1>
   <!-- Embedded image as Base64 -->
   <img src="https://aqsindia.in/images/pressure.jpg" alt="Under Construction" />
   <p>
-    Our website is under construction, but we are ready to go!<br>
-    Special surprise for our subscribers only
+    Our website is under construction or does not exist<br>
   </p>
 </body>
 </html>
