--- a/404.html
+++ b/404.html
@@ -38,7 +38,7 @@
   <!-- Embedded image as Base64 -->
   <img src="https://aqsindia.in/images/pressure.jpg" alt="Under Construction" />
   <p>
-    Our website is under construction or does not exist<br>
+    Our webpage is under construction or does not exist<br>
   </p>
 </body>
 </html>
