--- a/404.html
+++ b/404.html
@@ -37,7 +37,7 @@
   <!-- Embedded image as Base64 -->
   <img src="https://aqsindia.in/images/pressure.jpg" alt="Under Construction" />
   <p>
-    Our webpage is under construction or does not exist<br>
+    Webpage is under construction or does not exist<br>
   </p>
 </body>
 </html>
