--- a/index.html
+++ b/index.html
@@ -232,25 +232,25 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item">
+           <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="calibration-goa.html">Calibration</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Validation</a>
+            <a class="nav-link" href="validation-goa.html">Validation</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Temperature Mapping</a>
+            <a class="nav-link" href="thermal valdation-goa.html">Temperature Mapping</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Sales and Service</a>
+            <a class="nav-link" href="instrument sales.html">Sales and Service</a>
           </li>
          <li class="nav-item">
-            <a class="nav-link" href="index.html">Industrial Engineering Service</a>
+            <a class="nav-link" href="industrial engineering.html">Industrial Engineering Service</a>
           <li class="nav-item">
-            <a class="nav-link" href="index.html">About Us</a>
+            <a class="nav-link" href="about us.html">About Us</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
