thermal valdation-goa.html

--- a/thermal valdation-goa.html
+++ b/thermal valdation-goa.html
@@ -336,7 +336,7 @@ flex-wrap: nowrap;           /* Don't wrap on desktop */
       spots, ensures uniformity, and verifies that your systems meet GMP and other regulatory requirements.
     </p>
     <p>
-      At Acquiescent Systems</strong>, we specialize in accurate and compliant temperature and RH (relative humidity)
+      At Acquiescent Systems, we specialize in accurate and compliant temperature and RH (relative humidity)
       mapping for controlled environments and critical equipment. From compact incubators and cold rooms to high-capacity
       autoclaves and large-scale storage areas, we deliver fully tailored mapping solutions to match your operational and compliance needs.
     </p>
@@ -377,7 +377,7 @@ flex-wrap: nowrap;           /* Don't wrap on desktop */
   <h4>Warehouse & Cold Storage Mapping</h4>
 </div>
 <div class="col-md-4">
-<img src="https://aqsindia.in/images/mapping.jpg" alt="Mechanical Instruments" class="img-fluid"></div>.
+<img src="https://aqsindia.in/images/mapping.jpg" alt="Thermal Validation" class="img-fluid"></div>.
 <p>
       With growing scrutiny from global regulators, it’s essential that warehouses and cold storage areas maintain consistent,
       validated temperatures. We help you comply with PIC/S Clause 3.19 by implementing accurate, documented environmental controls.
