Industrial Engineering Service.html

--- a/Industrial Engineering Service.html
+++ b/Industrial Engineering Service.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -349,9 +350,9 @@ flex-wrap: nowrap;           /* Don't wrap on desktop */
   </section>
 
   <!-- Engineering and Maintenance Service -->
-  <section class="py-5" style="background-color: #f9f9f9;">
-    <div class="container">
-      <div class="underline-heading">
+<section class="py-5" style="font-family: Arial, sans-serif; background-color: #f9f9f9;">
+  <div class="container">
+<div class="underline-heading">
         <h4>Engineering and Maintenance Service</h4>
       </div>
       <p>
@@ -367,26 +368,43 @@ flex-wrap: nowrap;           /* Don't wrap on desktop */
       <h4>Industrial Engineering Service Offerings</h4>
     </div>
 
-    <div class="instrument-grid">
-      <!-- AMC -->
-      <div class="instrument-col">
-        <h6>• Annual Maintenance Contracts (AMC)</h6>
-        <p>We offer flexible and comprehensive AMCs to maintain your process equipment, instrumentation, and control systems. Our preventive and predictive maintenance schedules are tailored to reduce breakdowns, ensure calibration compliance, and improve equipment lifespan — helping you achieve uninterrupted operations and peace of mind.</p>
-      </div>
+  <div class="service-block">
+    <h6>• Annual Maintenance Contracts (AMC)</h6>
+    <p>
+      We offer flexible and comprehensive AMCs to maintain your process equipment, instrumentation, and control systems.
+      Our preventive and predictive maintenance schedules are tailored to reduce breakdowns, ensure calibration compliance,
+      and improve equipment lifespan — helping you achieve uninterrupted operations and peace of mind.
+    </p>
+  </div>
 
-      <!-- Instrument Customization -->
-      <div class="instrument-col">
-        <h6>• Customization of Process Instruments</h6>
-        <p>Every plant is unique — and so are its control requirements. We offer custom engineering solutions to modify or adapt standard instruments to meet your specific process needs. This includes changes in housing, ranges, sensor configuration, communication protocols, and mounting styles.</p>
-      </div>
+  <div class="service-block">
+    <h6>• Customization of Process Instruments</h6>
+    <p>
+      Every plant is unique — and so are its control requirements. We offer custom engineering solutions to modify or adapt
+      standard instruments to meet your specific process needs. This includes changes in housing, ranges, sensor configuration,
+      communication protocols, and mounting styles.
+    </p>
+  </div>
 
-      <!-- Panel Wiring -->
-      <div class="instrument-col">
-        <h6>• Panel Wiring</h6>
-        <p>We provide professional control panel wiring services, including layout design, panel assembly, component mounting, wiring, testing, and labeling. All work is done with strict adherence to electrical safety norms and your plant's documentation requirements. We specialize in wiring for PLC panels, junction boxes, and motor control centers (MCCs).</p>
-      </div>
-    </div>
-  </section>
+  <div class="service-block">
+    <h6>• Commissioning</h6>
+    <p>
+      We provide end-to-end commissioning services for newly installed industrial systems, ensuring all equipment and control
+      instrumentation are tested, calibrated, and fully operational before handover. Our expert team follows detailed commissioning
+      protocols to verify performance, safety, and integration with your existing automation environment. This service minimizes
+      startup delays, reduces risks, and ensures your system is ready for smooth, efficient production from day one.
+    </p>
+  </div>
+
+  <div class="service-block">
+    <h6>• Panel Wiring</h6>
+    <p>
+      We provide professional control panel wiring services, including layout design, panel assembly, component mounting, wiring,
+      testing, and labeling. All work is done with strict adherence to electrical safety norms and your plant's documentation
+      requirements. We specialize in wiring for PLC panels, junction boxes, and motor control centers (MCCs).
+    </p>
+  </div>
+</section>
 
   <!-- Contact Section -->
   <section class="container my-5">
