--- a/contact.html
+++ b/contact.html
@@ -211,21 +211,21 @@ flex-wrap: nowrap;           /* Don't wrap on desktop */
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Calibration</a>
+            <a class="nav-link" href="calibration-goa.html">Calibration</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Validation</a>
+            <a class="nav-link" href="validation-goa.html">Validation</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Temperature Mapping</a>
+            <a class="nav-link" href="thermal valdation-goa.html">Temperature Mapping</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Sales and Service</a>
+            <a class="nav-link" href="instrument sales.html">Sales and Service</a>
           </li>
          <li class="nav-item">
-            <a class="nav-link" href="index.html">Industrial Engineering Service</a>
+            <a class="nav-link" href="industrial engineering.html">Industrial Engineering Service</a>
           <li class="nav-item">
-            <a class="nav-link" href="index.html">About Us</a>
+            <a class="nav-link" href="about us.html">About Us</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
@@ -258,22 +258,22 @@ flex-wrap: nowrap;           /* Don't wrap on desktop */
       <p><strong>Email:</strong> <a href="mailto:sales@aqsindia.in">sales@aqsindia.in</a></p>
       <p><strong>Phone:</strong> <a href="tel:+919423736453">+91 9423736453</a></p>
     </div>
-        <form>
-          <div class="row mb-3">
-            <div class="col-md-6">
-              <input type="text" class="form-control" placeholder="Your Name" required>
-            </div>
-            <div class="col-md-6">
-              <input type="email" class="form-control" placeholder="Your Email" required>
-            </div>
-          </div>
-          <div class="mb-3">
-            <textarea class="form-control" rows="5" placeholder="Your Message" required></textarea>
-          </div>
-          <div class="text-center">
-            <button type="submit" class="btn btn-primary">Send Message</button>
-          </div>
-        </form>
+        <form action="https://formspree.io/f/xnnzlnaz" method="POST">
+  <div class="row mb-3">
+    <div class="col-md-6">
+      <input type="text" name="name" class="form-control" placeholder="Your Name" required>
+    </div>
+    <div class="col-md-6">
+      <input type="email" name="email" class="form-control" placeholder="Your Email" required>
+    </div>
+  </div>
+  <div class="mb-3">
+    <textarea name="message" class="form-control" rows="5" placeholder="Your Message" required></textarea>
+  </div>
+  <div class="text-center">
+    <button type="submit" class="btn btn-primary">Send Message</button>
+  </div>
+</form>
       </div>
     </section>
   </main>
@@ -284,53 +284,51 @@ flex-wrap: nowrap;           /* Don't wrap on desktop */
     <div class="blogi1" style="width: 250px;">
       <h2 class="what">Calibration</h2>
       <p>
-    • <a href="https://aqsindia.in/" class="linka">Pressure Measurements</a><br>
-    • <a href="https://aqsindia.in/" class="linka">Thermal Measurements</a><br>
-    • <a href="https://aqsindia.in/" class="linka">Mechanical Measurements</a><br>
-    • <a href="https://aqsindia.in/" class="linka">Electro-Technical &nbsp;&nbsp;Measurements</a><br>
-    • <a href="https://aqsindia.in/" class="linka">Medical Measurements</a><br>
-    • <a href="https://aqsindia.in/" class="linka">Other Process Related &nbsp;&nbsp;Measurements</a><br>
+    • <a href="Pressure Instruments.html" class="linka">Pressure Instruments</a><br>
+    • <a href="Thermal Instruments.html" class="linka">Thermal Instruments</a><br>
+    • <a href="Mechanical Instruments.html" class="linka">Mechanical Instruments</a><br>
+    • <a href="Electro-Technical Instruments.html" class="linka">Electro-Technical Instruments</a><br>
+    • <a href="Medical Instruments.html" class="linka">Medical Instruments</a><br>
+    • <a href="Other Process Related.html" class="linka">Other Process Related &nbsp;&nbsp;Instruments</a><br>
       </p>
     </div>
 
     <div class="blogi1" style="width: 200px;">
       <h2 class="what">Validation</h2>
       <p>
-         • <a href="https://aqsindia.in/" class="linka">Clean Room Validation</a><br>
-         • <a href="https://aqsindia.in/" class="linka">Isolator Validation</a><br>
-         • <a href="https://aqsindia.in/" class="linka">Biosafety, LAF Validation</a><br>
-         • <a href="https://aqsindia.in/" class="linka">PLC Validation</a>
+         • <a href="Clean Room Validation.html" class="linka">Clean Room Validation</a><br>
+         • <a href="Isolator Validation.html" class="linka">Isolator Validation</a><br>
+         • <a href="LAF Validation.html" class="linka">Biosafety, LAF Validation</a><br>
+         • <a href="PLC Validation.html" class="linka">PLC Validation</a>
       </p>
     </div>
 
 <div class="blogi1" style="width: 210px;">
   <h2 class="what">Sales and Services</h2>
   <p>
-    • <a href="https://aqsindia.in/" class="linka">Process Instruments</a><br>
-    • <a href="https://aqsindia.in/" class="linka">Laboratory Instruments</a><br>
-    • <a href="https://aqsindia.in/" class="linka">Engineering Instruments</a><br>
-    • <a href="https://aqsindia.in/" class="linka">Instrument Installation</a><br>
+    • <a href="Process Instruments.html" class="linka">Process Instruments</a><br>
+    • <a href="Laboratory Instruments.html" class="linka">Laboratory Instruments</a><br>
+    • <a href="Engineering Instruments.html" class="linka">Engineering Instruments</a><br>
+    • <a href="Instrument Installation.html" class="linka">Instrument Installation</a><br>
   </p>
 </div>
     <div class="blogi1" style="width: 218px;">
       <h2 class="what">Temperature Mapping</h2>
       <p>
-         • <a href="https://aqsindia.in/" class="linka">Warehouse Temperature & &nbsp;&nbsp;RH Monitoring</a><br>
-         • <a href="https://aqsindia.in/" class="linka">Autoclaves, Sterilizer &nbsp;&nbsp;Temperature Mapping</a><br>
-         • <a href="https://aqsindia.in/" class="linka">Dry Heat Sterilizer, Ovens &nbsp;&nbsp;Temp Mapping</a><br>
-         • <a href="https://aqsindia.in/" class="linka">Incubator, Cold Room &nbsp;&nbsp;Temperature Mapping</a>
+         • <a href="Temperature Mapping.html" class="linka">Warehouse Temperature & &nbsp;&nbsp;RH Monitoring</a><br>
+         • <a href="Temperature Mapping.html" class="linka">Autoclaves, Sterilizer &nbsp;&nbsp;Temperature Mapping</a><br>
+         • <a href="Temperature Mapping.html" class="linka">Dry Heat Sterilizer, Ovens &nbsp;&nbsp;Temp Mapping</a><br>
+         • <a href="Temperature Mapping.html" class="linka">Incubator, Cold Room &nbsp;&nbsp;Temperature Mapping</a>
       </p>
     </div>
 
     <div class="blogi1" style="width: 300px;">
       <h2 class="what">Industrial Engineering Service</h2>
       <p>
-         • <a href="https://aqsindia.in/" class="linka">Maintenance Services</a><br>
-         • <a href="https://aqsindia.in/" class="linka">Annual Maintenance Contracts (AMC)</a><br>
-         • <a href="https://aqsindia.in/" class="linka">Qualification</a><br>
-         • <a href="https://aqsindia.in/" class="linka">Commissioning</a><br>
-         • <a href="https://aqsindia.in/" class="linka">Customization Of Process Instruments</a><br>
-         • <a href="https://aqsindia.in/"class="linka">Panel Wiring</a>
+         • <a href="Industrial Engineering Service.html" class="linka">Annual Maintenance Contracts (AMC)</a><br>
+         • <a href="Industrial Engineering Service.html" class="linka">Commissioning</a><br>
+         • <a href="Industrial Engineering Service.html" class="linka">Customization Of Process Instruments</a><br>
+         • <a href="Industrial Engineering Service.html"class="linka">Panel Wiring</a>
       </p>
     </div>
 
@@ -346,3 +344,4 @@ flex-wrap: nowrap;           /* Don't wrap on desktop */
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
