--- a/contact.html
+++ b/contact.html
@@ -259,6 +259,7 @@ flex-wrap: nowrap;           /* Don't wrap on desktop */
       <p><strong>Phone:</strong> <a href="tel:+919423736453">+91 9423736453</a></p>
     </div>
         <form action="https://formspree.io/f/xnnzlnaz" method="POST">
+			<input type="hidden" name="_redirect" value="https://aqsindia.in/Thankyou.html">
   <div class="row mb-3">
     <div class="col-md-6">
       <input type="text" name="name" class="form-control" placeholder="Your Name" required>
@@ -344,4 +345,5 @@ flex-wrap: nowrap;           /* Don't wrap on desktop */
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
